Migrate to junit 5
Signed-off-by: Andrea Lamparelli <a.lamparelli95@gmail.com>